--- a/Frontend/captsone-project/src/app/main-page/main-page.component.html
+++ b/Frontend/captsone-project/src/app/main-page/main-page.component.html
@@ -5,7 +5,7 @@
     <a routerLink="/user-main" style="text-decoration: none;">
       <div class="card " style=" background-color: antiquewhite;">
         <div class="card-body">
-          <h3 class="card-sub align-middle" style="color: aqua">User</h3>
+          <h3 class="card-sub align-middle" style="color: aqua">Users</h3>
         </div>
       </div>
     </a>
