--- a/Frontend/captsone-project/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/Frontend/captsone-project/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -7,7 +7,7 @@
                     <p class="card-text">
                         Send new requests to admin to increase product quantities
                     </p>
-                    <button (click)="sendRequest()" class="btn btn-info">Add</button>
+                    <button (click)="sendRequest()" class="btn btn-info">Send</button>
                 </div>
             </div>
 
@@ -24,7 +24,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Unlock Users</h5>
                     <p class="card-text">View list of users whose account is locked & unlock them</p>
-                    <button (click)="unlockUsers()" class="btn btn-info">Delete</button>
+                    <button (click)="unlockUsers()" class="btn btn-info">Unlock</button>
                 </div>
             </div>
 
@@ -33,7 +33,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Edit Profile</h5>
                     <p class="card-text">Edit your profile</p>
-                    <button (click)="editProfile()" class="btn btn-info">View</button>
+                    <button (click)="editProfile()" class="btn btn-info">Edit</button>
                 </div>
             </div>
         </div>
