--- a/Frontend/captsone-project/src/app/user/user-main/user-main.component.html
+++ b/Frontend/captsone-project/src/app/user/user-main/user-main.component.html
@@ -1,1 +1,10 @@
-<p>user-main works!</p>
+<div>
+    <h2>User Page</h2>
+ <input type="button" value="Sign Up"
+ (click)="signup()" class="btn btn-success"/> <br/>
+ <input type="button" value="Sign In"
+ (click)="signin()" class="btn btn-success"/> <br/>
+ <input type="button" value="Raise Ticket"
+ (click)="raiseticket()" class="btn btn-success"/> 
+
+</div>
