--- a/Frontend/captsone-project/src/app/user/userdashboard/userdashboard.component.html
+++ b/Frontend/captsone-project/src/app/user/userdashboard/userdashboard.component.html
@@ -1,7 +1,7 @@
-<h2>User Portal</h2>
+<h2 style="text-align:center;">User Portal</h2>
 <div class="jumbotron">
     <div class="container">
-        
+        <div class="row row-cols-2">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Select Items</h5>
@@ -61,14 +61,7 @@
                     <button (click)="Funds()" class="btn btn-primary">Funds</button>
                 </div>
             </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Logout</h5>
-                    <p class="card-text">Logout From your account</p>
-                    <button (click)="Logout()" class="btn btn-primary">Logout</button>
-                </div>
-            </div>
-
+        </div>
     </div>
 </div>
 
