--- a/Frontend/captsone-project/src/app/admin/addemployee/addemployee.component.html
+++ b/Frontend/captsone-project/src/app/admin/addemployee/addemployee.component.html
@@ -1,19 +1,31 @@
 
 <div>
-    <form #employeeRef="ngForm" (ngSubmit)="signup(employeeRef.value)">
-        <label>Employee Id</label>
-        <input type="text" name="eid" ngModel><br/>
-        <label>First Name</label>
-        <input type="text" name="fname" ngModel><br/>
-        <label>Last Name</label>
-        <input type="text" name="lname" ngModel><br/>
-        <label>Email Id</label>
-        <input type="text" name="emailid" ngModel><br/>
-        <label>Password</label>
-        <input type="text" name="pass" ngModel><br/>
-        <input type="submit" value="Signup"/>
-        <input type="reset" value="reset"/>
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <form class="px-4 py-3" #employeeRef="ngForm" (ngSubmit)="signup(employeeRef.value); employeeRef.resetForm()">
+                    <div class="mb-3">
+                    <label>First Name</label>
+                    <input class="form-control" type="text" name="fname" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                    <label>Last Name</label>
+                    <input class="form-control" type="text" name="lname" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                    <label>Email Id</label>
+                    <input class="form-control" type="text" name="emailid" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                    <label>Password</label>
+                    <input class="form-control" type="password" name="pass" ngModel required>
+                    </div>
+                    <input type="submit" value="Signup" class="btn btn-link" [disabled]="employeeRef.invalid"/>
+                    <input type="reset" value="reset" class="btn btn-secondary"/>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 
