--- a/Frontend/captsone-project/src/app/user/signup/signup.component.html
+++ b/Frontend/captsone-project/src/app/user/signup/signup.component.html
@@ -1,23 +1,41 @@
 <div>
-    <h2>User Signup</h2>
-    <form #userRef="ngForm" (ngSubmit)="signup(userRef.value)">
-        <label>User Id</label>
-        <input type="text" name="uid" ngModel><br/>
-        <label>First Name</label>
-        <input type="text" name="fname" ngModel><br/>
-        <label>Last Name</label>
-        <input type="text" name="lname" ngModel><br/>
-        <label>Date of Birth</label>
-        <input type="date" name="dob" ngModel><br/>
-        <label>Address</label>
-        <input type="text" name="address" ngModel><br/>
-        <label>Funds</label>
-        <input type="number" name="fund" ngModel><br/>
-        <label>Email Id</label>
-        <input type="text" name="emailid" ngModel><br/>
-        <label>Password</label>
-        <input type="text" name="pass" ngModel><br/>
-        <input type="submit" value="Signup"/>
-        <input type="reset" value="reset"/>
-    </form>
+    <h2 style="text-align:center;">User Signup</h2>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <form class="px-4 py-3" #userRef="ngForm" (ngSubmit)="signup(userRef.value); userRef.resetForm()">
+                    <div class="mb-3">
+                        <label>First Name</label>
+                        <input type="text" class="form-control" placeholder="your first name" name="fname" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Last Name</label>
+                        <input type="text" class="form-control" placeholder="your last name" name="lname" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Date of Birth</label>
+                        <input type="date" class="form-control" name="dob" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Address</label>
+                        <input type="text" class="form-control" placeholder="your address" name="address" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                        <label>User Name</label>
+                        <input type="text" class="form-control" placeholder="your username" name="userName" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Email Id</label>
+                        <input type="email" class="form-control" placeholder="email@example.com" name="emailid" ngModel required>
+                    </div>
+                    <div class="mb-3">
+                        <label>Password</label>
+                        <input type="password" class="form-control" name="pass" placeholder="password" ngModel required>
+                    </div>
+                    <input type="submit" value="Signup" class="btn btn-link" [disabled]="userRef.invalid"/>
+                    <input type="reset" value="reset" class="btn btn-secondary"/>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
