--- a/Frontend/captsone-project/src/app/app.component.html
+++ b/Frontend/captsone-project/src/app/app.component.html
@@ -3,7 +3,9 @@
     <img src="../assets/grocery_store_icon.png" width="30" height="30" alt="">
     Grocery Store
   </a>
-  <button *ngIf="adminAuthService.isAdminLoggedIn() ||employeeAuthService.isEmployeeLoggedIn()" (click)="logout()" class="btn btn-outline-danger my-2 my-sm-0" type="submit">Logout</button>
+  <button *ngIf="adminAuthService.isAdminLoggedIn() ||employeeAuthService.isEmployeeLoggedIn() || 
+    userAuthService.isUserLoggedIn()" (click)="logout()" class="btn btn-outline-danger my-2 my-sm-0" 
+    type="submit">Logout</button>
 </nav>
 <div style="margin-top: 20px;">
   <router-outlet></router-outlet>
