Chandra part of code done

--- a/Frontend/captsone-project/src/app/user/userdashboard/userdashboard.component.html
+++ b/Frontend/captsone-project/src/app/user/userdashboard/userdashboard.component.html
@@ -4,40 +4,13 @@
         <div class="row row-cols-2">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Select Items</h5>
+                    <h5 class="card-title">Start Shopping</h5>
                     <p class="card-text">
-                      Select Items to the cart
+                      View stems and start shopping
                     </p>
-                    <button (click)="SelectItems()" class="btn btn-primary">Select Items</button>
-
+                    <button (click)="StartShopping()" class="btn btn-primary">Start</button>
                 </div>
             </div>
-
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Delete Items </h5>
-                    <p class="card-text">Delete Items from the cart</p>
-                    <button (click)="DeleteItems()" class="btn btn-primary">Delete</button>
-                </div>
-            </div>
-
-
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">View Items</h5>
-                    <p class="card-text">View Items in the cart</p>
-                    <button (click)="viewItems()" class="btn btn-primary">View</button>
-                </div>
-            </div>
-
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title">Check Out</h5>
-                    <p class="card-text">Check Out from the cart</p>
-                    <button (click)="CheckOut()" class="btn btn-primary">CheckOut</button>
-                </div>
-            </div>
-
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Order Status</h5>
