--- a/Frontend/captsone-project/src/app/user/signin/signin.component.html
+++ b/Frontend/captsone-project/src/app/user/signin/signin.component.html
@@ -6,7 +6,7 @@
                 <form class="px-4 py-3" #userRef="ngForm" (ngSubmit)="signin(userRef.value)">
                     <div class="mb-3">
                         <label>User Name</label>
-                        <input class="form-control" placeholder="email@example.com" type="text" name="userName" ngModel required>
+                        <input class="form-control" placeholder="username" type="text" name="userName" ngModel required>
                     </div>
                     <div class="mb-3">
                         <label>Password</label>
