--- a/Frontend/captsone-project/src/app/admin/deleteemployee/deleteemployee.component.html
+++ b/Frontend/captsone-project/src/app/admin/deleteemployee/deleteemployee.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm-6 offset-sm-3">
             <label>Email</label> 
             <input class="form-control" type="email" #emailRef/>
-            <input type="button" value="Delete By Id"
+            <input type="button" value="Delete"
             (click)="deleteEmployees(emailRef.value)" class="btn btn-primary">
         </div>
     </div>
