--- a/Frontend/captsone-project/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Frontend/captsone-project/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -54,6 +54,14 @@
                 </div>
             </div>
 
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Generate Reports</h5>
+                    <p class="card-text">Generate Different Kinds of Reports</p>
+                    <button (click)="generateReports()" class="btn btn-primary">Generate Reports</button>
+                </div>
+            </div>
+
 
 
 
