--- a/Frontend/captsone-project/src/app/admin/admin-main/admin-main.component.html
+++ b/Frontend/captsone-project/src/app/admin/admin-main/admin-main.component.html
@@ -28,6 +28,7 @@
                     </div>
                     
                 </form>
+                <input type="button" class="btn btn-info" value="back to main" (click)="back()"/>
             </div>
         </div>
     </div>
