--- a/Frontend/captsone-project/src/app/employee/employee-main/employee-main.component.html
+++ b/Frontend/captsone-project/src/app/employee/employee-main/employee-main.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-center">Employee Sign In page</h2>
 <div class="container">
     <div class="row">
         <div class="col-sm-6 offset-sm-3">
@@ -14,6 +15,9 @@
             <button type="reset" class="btn btn-secondary">Clear</button>
             </form>
         </div>
+    </div>
+    <div class="text-center">
+    <input type="button" class="btn btn-info" value="back to main" (click)="back()"/>
     </div>
 </div>
   
