Srinath merge done

--- a/Frontend/captsone-project/src/app/employee/employee-dashboard/employee-dashboard.component.html
+++ b/Frontend/captsone-project/src/app/employee/employee-dashboard/employee-dashboard.component.html
@@ -22,9 +22,9 @@
 
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                    <h5 class="card-title">Unlock Users</h5>
+                    <h5 class="card-title">View locked user</h5>
                     <p class="card-text">View list of users whose account is locked & unlock them</p>
-                    <button (click)="unlockUsers()" class="btn btn-info">Unlock</button>
+                    <button (click)="unlockUsers()" class="btn btn-info">View</button>
                 </div>
             </div>
 
