--- a/Frontend/captsone-project/src/app/admin/view-requests/view-requests.component.html
+++ b/Frontend/captsone-project/src/app/admin/view-requests/view-requests.component.html
@@ -10,10 +10,10 @@
         <tbody>
             <tr *ngFor="let item of requestsModel; let i = index">
                 <td>
-                    {{ i+1 }}
+                    {{item._id }}
                 </td>
                 <td>
-                    {{ item.request }}
+                    {{ item.prodreq }}
                 </td>
             </tr>
         </tbody>
