--- a/Frontend/captsone-project/src/app/employee/employee-profile/employee-profile.component.html
+++ b/Frontend/captsone-project/src/app/employee/employee-profile/employee-profile.component.html
@@ -1,1 +1,12 @@
-<p>employee-profile works!</p>
+
+<div class="form-group">
+    <form #productRef="ngForm"(ngSubmit)="updatePwd(productRef.value)">
+        <label>Employee Email</label>
+        <input type="text" class="form-control" name="eid" ngModel><br/>
+        
+        <label>New Password</label>
+        <input type="password" class="form-control" name="pwd" ngModel><br/>
+        <button type="submit" class="btn btn-primary mb-2">Update Password</button>
+    </form>
+    {{updateMsg}}
+</div>
