added back button

--- a/Frontend/captsone-project/src/app/user/user-main/user-main.component.html
+++ b/Frontend/captsone-project/src/app/user/user-main/user-main.component.html
@@ -31,6 +31,14 @@
                         <button (click)="raiseticket()" class="btn btn-info">Raise Ticket</button>
                     </div>
                 </div>
+
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Back to main</h5>
+                        <p class="card-text">Go back to main page</p>
+                        <button (click)="back()" class="btn btn-info">Back</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
