--- a/Frontend/captsone-project/src/app/admin/generatereports/generatereports.component.html
+++ b/Frontend/captsone-project/src/app/admin/generatereports/generatereports.component.html
@@ -89,7 +89,7 @@
         
         <td>{{pp.name}}</td>
         <td>{{pp.price}}</td>
-        <td>{{pp.quantity}}</td>
+        <td>{{pp.maxQuant}}</td>
       </tr>
     </tbody>
 </table>
